src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>FinServ__ClientCategory__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AML_Waiver_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AML Waiver IND</description>
        <label>AML Waiver IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisor_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrictions applied to Firms so that its Reps do not show up in a search</description>
        <label>Advisor Find IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_RIA_Dual_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the firm is currently registered as both a BD and an RIA.</description>
        <label>BD RIA Dual IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Type_Primary__c</fullName>
        <description>Some firms have a number of business lines and so have been assigned multiple BD types. For example, Wells Fargo Advisors LLC has Retail BD Types Wirehouse and Bank, and we assigned Wirehouse as its Primary BD Type. If a firm does no retail business, its Primary BD Type is Institutional.</description>
        <label>BD Type Primary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Types__c</fullName>
        <description>Discovery Data has analyzed every firm and assigned to each one or more of the BD Types listed below within a comma separated string.</description>
        <label>BD Types</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Broker_Dealer_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Broker_Dealer_IND</description>
        <label>Broker Dealer IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRD__c</fullName>
        <description>Central Registration Depository (CRD) number is FINRA's unique identifier for registered firms. FINRA administers the CRD number series but it is utilized by all regulators including Securities and Exchange Commission (SEC) and all state securities commissions. The number is unique and never recycled.</description>
        <label>CRD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_SA_Waiver_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Combined SA Waiver IND</description>
        <label>Combined SA Waiver IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Structure__c</fullName>
        <description>Indicates whether firm is a corporation, limited partnership, etc.</description>
        <label>Corporate Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <description>Another identifier for a Firm , business alias, "Doing Business As"</description>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_Client_Confirmation_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the method of providing transactional statements</description>
        <label>Deliver Client Confirmation IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliver_Client_Statement_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the method of providing statements</description>
        <label>Deliver Client Statement IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Grouping of Companies based on the sales team who will service them</description>
        <label>Distribution Channel</label>
        <referenceTo>PL_Channel_Goals__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <description>Division Code</description>
        <label>Division Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSD</fullName>
                </value>
                <value>
                    <fullName>LID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drive_Zones__c</fullName>
        <description>Drive Zones</description>
        <label>Drive Zones</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_Mail_Code__c</fullName>
        <description>Indicates where the duplicate annuity contract is mailed</description>
        <label>Duplicate Mail Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Type_Code_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a duplicate contract copy is sent</description>
        <label>Duplicate Type Code IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EO_Status_DESC__c</fullName>
        <description>EO Status DESC</description>
        <label>EO Status DESC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Email__c</fullName>
        <description>The email of the company doing business with PL</description>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Firm_Focus__c</fullName>
        <description>Firm Focus</description>
        <label>Firm Focus</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Firm_Marketing_Status__c</fullName>
        <description>Indicates if the company is active for marketing</description>
        <label>Firm Marketing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_Registration_Type__c</fullName>
        <description>Denotes the firm's registration type, such as, BD-Only, RIA-Only, Dually BD-RIA.</description>
        <label>Firm Registration Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Status__c</fullName>
        <description>Indicates if the company is still contracted with PL or the contract has been terminated</description>
        <label>Firm Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <description>Month the firm closes their books.</description>
        <label>Fiscal Year End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixedRateURL__c</fullName>
        <description>Websites for individual firms if they have special rates</description>
        <label>Fixed Rate URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Focus_Firm__c</fullName>
        <description>Firms that more focus to increase the volume of business.</description>
        <label>Focus Firm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hold_Harmless_Agreement_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hold Harmless Agreement IND</description>
        <label>Hold Harmless Agreement IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISP_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if Line of Business is Institutional or not</description>
        <label>ISP IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Indicates the individual source system Ids</description>
        <externalId>true</externalId>
        <label>Account Key</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Legal name under which broker-dealer business primarily is conducted, as provided to the Securities and Exchange Commission (SEC) in Item 1.A. of Form BD.</description>
        <label>Legal Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_County__c</fullName>
        <description>The county of the company doing business with PL</description>
        <label>Location County</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_GeoLocURL__c</fullName>
        <description>Location Geo Loc URL</description>
        <label>Location Geo Loc URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_USPS_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the address has met the rigorous United States Postal Service® CASS™ certification requirements through our process to continuously validate, update, correct, standardize and format addresses.</description>
        <label>Location USPS Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Zip3__c</fullName>
        <description>Location Zip-3</description>
        <label>Location Zip-3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <description>The metropolitan statistical area of the company doing business with PL</description>
        <label>MSA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Exceptions_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Exceptions IND</description>
        <label>Marketing Exceptions IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mutual_Fund_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mutual Fund IND</description>
        <label>Mutual Fund IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPN__c</fullName>
        <description>Identifier for a Firm , stands for National Producer Number</description>
        <label>NPN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_BD_Reps__c</fullName>
        <description>Number of reps associated with the BD reported by Discovery Data.</description>
        <label>Num of BD Reps</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Branch_Offices__c</fullName>
        <description>BD's number of branch offices.</description>
        <label>Num of Branch Offices</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Firm_Reps__c</fullName>
        <description>Number of reps associated with the BD reported by Discovery Data.</description>
        <label>Num of Firm Reps</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Insurance_Lic_Reps__c</fullName>
        <description>Number of insurance licensed reps reported by the RIA on their Form ADV.</description>
        <label>Num of Insurance Lic Reps</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_RIA_Reps__c</fullName>
        <description>Number of advisory reps associated with the firm reported by Discovery Data (dually registered firms only).</description>
        <label>Num of RIA Reps</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfcMail_USPS_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the address has met the rigorous United States Postal Service® CASS™ certification requirements through our process to continuously validate, update, correct, standardize and format addresses.</description>
        <label>Ofc Mail USPS Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Mailing_Street2__c</fullName>
        <description>The mailing address of the company doing business with PL</description>
        <label>Office Mailing Street2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Type_Code__c</fullName>
        <description>Segmentation of Firms if they are producer alliance</description>
        <label>PA Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliated Direct Alliance</fullName>
                </value>
                <value>
                    <fullName>IMO</fullName>
                </value>
                <value>
                    <fullName>Direct Alliance</fullName>
                </value>
                <value>
                    <fullName>Hybrid BD/GA Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PL_Annuity_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can do business in NY state</description>
        <label>PL Annuity Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PL_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can do business in all states except NY</description>
        <label>PL Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PL_Opt_Out_of_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PL Opt Out of Web</description>
        <label>PL Opt Out of Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_1035x__c</fullName>
        <description>Partial 1035x</description>
        <label>Partial 1035x</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Persistency_Bonus_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Persistency Bonus IND</description>
        <label>Persistency Bonus IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Mail_Code__c</fullName>
        <description>Indicates where the primary annuity contract is mailed</description>
        <label>Primary Mail Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Pre_Approval_Process__c</fullName>
        <description>Product Pre-Approval Process</description>
        <label>Product Pre-Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Special Handling</fullName>
                </value>
                <value>
                    <fullName>Need Approval</fullName>
                </value>
                <value>
                    <fullName>Auto Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_Plan_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Qualified Plan IND</description>
        <label>Qualified Plan IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIA_Avg_Acct_Size__c</fullName>
        <description>Derived by Discovery Data by dividing Total Assets by Total Accounts.</description>
        <label>RIA Avg Acct Size</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIA_Dis_Assets_in_Millions__c</fullName>
        <description>Assets for which the RIA has discretionary authority, enabling the RIA to enter transactions without first contacting the client for authorization. Reported on Form ADV Part 1 Item 5.F.2.a.</description>
        <label>RIA Dis Assets in Millions</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIA_Discretionary_Accts__c</fullName>
        <description>Number of accounts for which the RIA has discretionary powers, enabling the RIA to enter transactions without first contacting the client for authorization. Reported on Form ADV Part 1 Item 5.F.2.d.</description>
        <label>RIA Discretionary Accts</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIA_Internet_Investment_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The adviser has indicated on Form ADV Part 1 Item 2.A.(11) that it is an Internet Adviser.</description>
        <label>RIA Internet Investment Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIA_Min_Acct_Size__c</fullName>
        <description>If firm states a minimum account size within Form ADV Part 2A, it is indicated here.</description>
        <label>RIA Min Acct Size</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIA_Municipal_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The adviser has submitted SEC Form MA-T indicating it is a Municipal Advisor, and/or indicated on Form ADV Part 1 Item 5.D.(1)(l) or Part 2 Item 7 that it has municipalities as clients. Or the adviser has indicated in Item 6.A.(9) that it is actively engaged as a registered municipal advisor as other business activities. These advisers provide advice and/or service to municipal entities with respect to municipal financial products or the issuance of municipal securities.</description>
        <label>RIA Municipal Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIA_NonDis_Accts__c</fullName>
        <description>Accounts for which the RIA must contact the client for approval before entering transactions. Reported on Form ADV Part 1 Item 5.F.2.e.</description>
        <label>RIA NonDis Accts</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIA_NonDis_Assets_in_Millions__c</fullName>
        <description>Assets for which the RIA must contact the client for approval before entering transactions. Reported on Form ADV Part 1 Item 5.F.2.b.</description>
        <label>RIA NonDis Assets in Millions</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RIA_Only_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the firm is currently registered as RIA Only.</description>
        <label>RIA Only IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIA_Rating_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The adviser has indicated on Form ADV Part 1 Item 5.G.(9) that it provides security ratings advisory activities.</description>
        <label>RIA Rating Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIA_Tot_Accts__c</fullName>
        <description>Total accounts as reported in the most recent regulatory filing of Form ADV Part 1 Item 5.F.2.f.</description>
        <label>RIA Tot Accts</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIA_Tot_Assets_in_Millions__c</fullName>
        <description>Total assets as reported in the most recent regulatory filing of Form ADV Item 5.F.2.c.</description>
        <label>RIA Tot Assets in Millions</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Registered_States__c</fullName>
        <description>Comma separated list of the states in which the BD firm is registered to do business.</description>
        <label>Registered States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <description>Date the firm registered with regulator.</description>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Regulatory_Disclosures__c</fullName>
        <description>Indicates that the firm has provided at least one Yes answer within Form ADV Item 11. DISCLOSURE QUESTIONS.</description>
        <label>Regulatory Disclosures</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship Group</description>
        <label>Relationship Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Group</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Type_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Report Type IND</description>
        <label>Report Type IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restricted_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing restrictions applied to Firm</description>
        <label>Restricted IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEC_Reporting_Number__c</fullName>
        <description>Upon application approval with the Securities and Exchange Commission (SEC) utilizing Form BD, each firm is issued an SEC Reporting Number. This is the only unique regulatory ID for every BD (some BDs have not been assigned a CRD).</description>
        <label>SEC Reporting Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>field to hold Social Security Number</description>
        <encrypted>true</encrypted>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_last_4_Digits__c</fullName>
        <encrypted>true</encrypted>
        <label>SSN(last 4 Digits)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_2__c</fullName>
        <description>The address of the company doing business with PL</description>
        <label>Location Street 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>Short Name</description>
        <label>Short Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_EO_Waiver_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signed EO Waiver IND</description>
        <label>Signed EO Waiver IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Fin_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Source Fin IND</description>
        <label>Source Fin IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_VTG_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Source VTG IND</description>
        <label>Source VTG IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stock_Symbol__c</fullName>
        <description>Indicates if Firm is publicly traded</description>
        <label>Stock Symbol</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProducer_Waiver_IND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SubProducer Waiver IND</description>
        <label>SubProducer Waiver IND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIN__c</fullName>
        <description>Tax Identification Number</description>
        <label>TIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>End Date of all contracts with PL.</description>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Toll_Free__c</fullName>
        <description>Toll Free</description>
        <label>Toll Free</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FinServ__AUM__c</fullName>
        <description>Value of client's financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalAUMPrimaryOwner__c + FinServ__TotalAUMJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BankNumber__c</fullName>
        <label>Bank Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BorrowingHistory__c</fullName>
        <label>Borrowing History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Limited to No History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__BorrowingPriorities__c</fullName>
        <label>Borrowing Priorities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Build Equity</fullName>
                </value>
                <value>
                    <fullName>Debt Consolidation</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Large Capital Purchases</fullName>
                </value>
                <value>
                    <fullName>Property Purchase</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__BranchCode__c</fullName>
        <label>Branch Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BranchName__c</fullName>
        <label>Branch Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <description>Lead conversion Date and Time</description>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreditRating__c</fullName>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerID__c</fullName>
        <label>Customer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerSegment__c</fullName>
        <label>Customer Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Market</fullName>
                </value>
                <value>
                    <fullName>Mass Affluent</fullName>
                </value>
                <value>
                    <fullName>Wealth Accumulation</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Long Term Growth</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Millennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CustomerType__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Relational</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>